error input stream

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
-# nginx/nginx.conf - FIXED FOR STREAMING
+# nginx/nginx.conf - FIXED FOR REAL STREAMING
 worker_processes auto;
-error_log /var/log/nginx/error.log warn;
+error_log /var/log/nginx/error.log info;  # Changed to info for better debugging
 pid /var/run/nginx.pid;
 
 env JWT_SECRET;
@@ -17,18 +17,29 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    sendfile        on;
+    # CRITICAL: Disable ALL buffering for streaming
+    sendfile        off;  # DISABLED for streaming
+    tcp_nopush      off;  # DISABLED for streaming
+    tcp_nodelay     on;   # ENABLED for immediate delivery
     keepalive_timeout  65;
 
-    # FIXED: Disable buffering globally for streaming
+    # STREAMING: No buffering anywhere
     proxy_buffering off;
     proxy_request_buffering off;
     proxy_http_version 1.1;
+    proxy_read_timeout 600s;  # 10 minute timeout
+    proxy_send_timeout 600s;
     
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    # STREAMING: No compression for SSE
+    gzip off;  # DISABLED - gzip breaks streaming
+    
     resolver 127.0.0.11 ipv6=off;
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
+    
+    # STREAMING: Lua settings
+    lua_socket_keepalive_timeout 600s;
+    lua_socket_read_timeout 600s;
+    lua_socket_send_timeout 600s;
     
     # Shared memory zones
     lua_shared_dict guest_toggle 64k;
@@ -39,13 +50,13 @@ http {
         listen 80;
         server_name localhost;
         
-        # FIXED: ALL REQUIRED VARIABLES
+        # Required variables
         set $username '';
         set $user_type '';
         set $guest_slot_number '';
         set $guest_slot_requested '';
 
-        # STATIC ASSETS - No auth required
+        # STATIC ASSETS
         location /js/ {
             root /usr/local/openresty/nginx/dynamic_content;
             expires 1y;
@@ -64,7 +75,6 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
-        # Handle missing source maps gracefully
         location ~* \.map$ {
             return 404;
             log_not_found off;
@@ -86,7 +96,6 @@ http {
             }
         }
 
-        # INDEX WITH TEMPLATE SYSTEM
         location = / {
             content_by_lua_block {
                 local is_who = require "is_who"
@@ -94,7 +103,6 @@ http {
             }
         }
         
-        # CHAT SPA ROUTE
         location = /chat {
             content_by_lua_block {
                 local is_who = require "is_who"
@@ -102,7 +110,6 @@ http {
             }
         }
         
-        # DASH SPA ROUTE
         location = /dash {
             content_by_lua_block {
                 local is_who = require "is_who"
@@ -110,7 +117,6 @@ http {
             }
         }
         
-        # PENDING ROUTE
         location = /pending {
             content_by_lua_block {
                 local is_who = require "is_who"
@@ -176,7 +182,6 @@ http {
             }
         }
 
-        # GUEST API
         location ~ ^/api/guest/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -196,9 +201,9 @@ http {
             }
         }
 
-        # CHAT API - FIXED FOR STREAMING
+        # CHAT API - COMPLETELY FIXED FOR STREAMING
         location ~ ^/api/chat/ {
-            # STREAMING HEADERS - CRITICAL
+            # CORS headers
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
@@ -210,29 +215,12 @@ http {
                 return 204;
             }
             
-            # CRITICAL: Disable ALL buffering for streaming
-            proxy_buffering off;
-            proxy_cache off;
-            proxy_request_buffering off;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            
-            # STREAMING HEADERS
-            add_header 'Cache-Control' 'no-cache' always;
-            add_header 'Connection' 'keep-alive' always;
-            add_header 'X-Accel-Buffering' 'no' always;
-            
-            # CRITICAL: Enable real-time streaming
-            lua_check_client_abort on;
-            
+            # CRITICAL: Complete streaming configuration
+            chunked_transfer_encoding on;      # Enable chunked encoding
             lua_need_request_body on;
+            lua_check_client_abort on;         # Check if client disconnects
+            
             content_by_lua_block {
-                -- FIXED: Set proper streaming headers immediately
-                ngx.header["Content-Type"] = "text/event-stream"
-                ngx.header["Cache-Control"] = "no-cache"
-                ngx.header["Connection"] = "keep-alive"
-                ngx.header["X-Accel-Buffering"] = "no"
-                
                 local is_who = require "is_who"
                 is_who.route_to_handler("chat_api")
             }
@@ -267,7 +255,6 @@ http {
             }
         }
 
-        # CATCH-ALL for unknown routes
         location / {
             content_by_lua_block {
                 local is_who = require "is_who"
