remove end tokens that may conflict with sse

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ OLLAMA_URL=http://ollama:11434
 OLLAMA_LOAD_TIMEOUT=600s                    # Increased timeout for slow loading
 
 # Memory settings - CRITICAL FIXES
-OLLAMA_MMAP=true                            # ENABLED for large models with limited VRAM
+OLLAMA_MMAP=false                            # ENABLED for large models with limited VRAM
 OLLAMA_MLOCK=false                          # DISABLED to reduce memory pressure
 
 # Hybrid GPU+CPU settings - REDUCED FOR STABILITY
