--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ MODEL_DESCRIPTION=Advanced coding and reasoning model optimized for hybrid GPU+C
 # =============================================================================
 # ⚡ OLLAMA SERVER SETTINGS - OPTIMIZED FOR LIMITED VRAM
 # =============================================================================
-OLLAMA_HOST=0.0.0.0
+OLLAMA_HOST=0.0.0.0:11434
 OLLAMA_URL=http://ollama:11434
 OLLAMA_LOAD_TIMEOUT=600s                    # Increased timeout for slow loading
 
@@ -33,8 +33,8 @@ OLLAMA_MLOCK=false                          # DISABLED to reduce memory pressure
 
 # Hybrid GPU+CPU settings - REDUCED FOR STABILITY
 OLLAMA_GPU_LAYERS=12                         # REDUCED from 41 to 8 (critical fix)
-OLLAMA_CONTEXT_SIZE=256                    # REDUCED from 512 to manageable size
-OLLAMA_BATCH_SIZE=64                        # REDUCED from 128 to 64
+OLLAMA_CONTEXT_SIZE=512                    # REDUCED from 512 to manageable size
+OLLAMA_BATCH_SIZE=128                        # REDUCED from 128 to 64
 OLLAMA_NUM_THREAD=4                         # INCREASED CPU threads to compensate
 
 # Resource management - OPTIMIZED
@@ -59,15 +59,9 @@ MODEL_REPEAT_PENALTY=1.1                  # Default: 1.1
 MODEL_REPEAT_LAST_N=64                    # Default: 64
 
 # Context and prediction settings - REDUCED
-MODEL_NUM_CTX=256                        # REDUCED from 1024 to stable size
+MODEL_NUM_CTX=512                        # REDUCED from 1024 to stable size
 MODEL_NUM_PREDICT=128                     # REDUCED to 512 tokens max
-MODEL_SEED=0                              # Default: 0
-
-# Stop sequences
-MODEL_STOP_1="<|endoftext|>"             
-MODEL_STOP_2="<|im_end|>"                
-MODEL_STOP_3="[DONE]"                    
-MODEL_STOP_4="<|end|>"                   
+MODEL_SEED=0                              # Default: 0                 
 
 # =============================================================================
 # 📱 APPLICATION SETTINGS
@@ -86,11 +80,11 @@ MAX_PASSWORD_LENGTH=16
 # =============================================================================
 # 🐳 DOCKER RESOURCES - OPTIMIZED
 # =============================================================================
-OLLAMA_MEMORY=15G                         
+OLLAMA_MEMORY=16G                         
 OLLAMA_CPU=4                              # REDUCED from 6
-REDIS_MEMORY=512M                         # REDUCED from 1G
+REDIS_MEMORY=1G                         # REDUCED from 1G
 REDIS_CPU=1
-NGINX_MEMORY=512M                         # REDUCED from 1G
+NGINX_MEMORY=1G                         # REDUCED from 1G
 NGINX_CPU=1
 
 # =============================================================================
