fixing input steam...

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,7 @@ http {
     
     # STREAMING: No compression for SSE
     gzip off;  # DISABLED - gzip breaks streaming
+    chunked_transfer_encoding on;
     
     resolver 127.0.0.11 ipv6=off;
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
