--- a/.env
+++ b/.env
@@ -15,36 +15,8 @@ ADMIN_USER_ID=admin
 # =============================================================================
 # 🤖 MODEL CONFIGURATION
 # =============================================================================
-OLLAMA_VERSION=0.9.6
+OLLAMA_URL=http://vllm:8000
 OLLAMA_MODEL=devstral
-MODEL_DISPLAY_NAME=Devstral Small 2505
-MODEL_DESCRIPTION=Advanced coding and reasoning model optimized for hybrid GPU+CPU processing
-
-# =============================================================================
-# ⚡ OLLAMA SERVER SETTINGS - OPTIMIZED FOR LIMITED VRAM
-# =============================================================================
-OLLAMA_HOST=0.0.0.0:11434
-OLLAMA_URL=http://ollama:11434
-OLLAMA_LOAD_TIMEOUT=600s                    # Increased timeout for slow loading
-
-# Memory settings - CRITICAL FIXES
-OLLAMA_MMAP=false                            # ENABLED for large models with limited VRAM
-OLLAMA_MLOCK=false                          # DISABLED to reduce memory pressure
-
-# Hybrid GPU+CPU settings - REDUCED FOR STABILITY
-OLLAMA_GPU_LAYERS=12                         # REDUCED from 41 to 8 (critical fix)
-OLLAMA_CONTEXT_SIZE=512                    # REDUCED from 512 to manageable size
-OLLAMA_BATCH_SIZE=128                        # REDUCED from 128 to 64
-OLLAMA_NUM_THREAD=4                         # INCREASED CPU threads to compensate
-
-# Resource management - OPTIMIZED
-OLLAMA_KEEP_ALIVE=99999h                   
-OLLAMA_NOPRUNE=0                           # Allow pruning
-OLLAMA_MAX_LOADED_MODELS=1                 # Single model
-OLLAMA_PARALLEL=1                          # REDUCED parallel processing
-
-# GPU settings
-NVIDIA_VISIBLE_DEVICES=0                   # Use GPU 0
 
 # =============================================================================
 # 🎛️ MODEL PARAMETERS - REDUCED FOR STABILITY
@@ -57,7 +29,6 @@ MODEL_TOP_K=40                            # Default: 40
 MODEL_MIN_P=0.0                           # Default: 0.0 (disabled)
 MODEL_REPEAT_PENALTY=1.1                  # Default: 1.1
 MODEL_REPEAT_LAST_N=64                    # Default: 64
-
 # Context and prediction settings - REDUCED
 MODEL_NUM_CTX=512                        # REDUCED from 1024 to stable size
 MODEL_NUM_PREDICT=128                     # REDUCED to 512 tokens max
@@ -80,12 +51,12 @@ MAX_PASSWORD_LENGTH=16
 # =============================================================================
 # 🐳 DOCKER RESOURCES - OPTIMIZED
 # =============================================================================
-OLLAMA_MEMORY=16G                         
-OLLAMA_CPU=4                              # REDUCED from 6
+VLLM_CPU_LIMIT=4.0
+VLLM_MEMORY_LIMIT=16G
 REDIS_MEMORY=1G                         # REDUCED from 1G
-REDIS_CPU=1
+REDIS_CPU=1.0
 NGINX_MEMORY=1G                         # REDUCED from 1G
-NGINX_CPU=1
+NGINX_CPU=1.0
 
 # =============================================================================
 # 📦 REDIS & NETWORK
