--- a/.env
+++ b/.env
@@ -13,8 +13,12 @@ ADMIN_PASSWORD=admin1
 ADMIN_USER_ID=admin
 
 # =============================================================================
-# 🤖 MODEL CONFIGURATION
+# 🤖 MODEL CONFIGURATION - UPDATED FOR VLLM
 # =============================================================================
+VLLM_URL=http://vllm:8000
+VLLM_MODEL=devstral
+
+# Legacy variables (keeping for backward compatibility)
 OLLAMA_URL=http://vllm:8000
 OLLAMA_MODEL=devstral
 
