--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
   vllm:
-    image: vllm/vllm-openai:latest
+    image: ghcr.io/mistralai/mistral-vllm:latest
     container_name: devstral-vllm
     command: >
-      python3 -m vllm.entrypoints.openai.api_server
-      --model /models/devstral
+      vllm serve /models/devstral
       --tokenizer-mode mistral
       --config-format mistral
       --load-format mistral
@@ -18,7 +17,7 @@ services:
     volumes:
       - ./volumes/huggingface/hub/models--mistralai--Devstral-Small-2507:/models/devstral
     environment:
-      - MODEL_NAME=${OLLAMA_MODEL}
+      - MODEL_NAME=${VLLM_MODEL}
     deploy:
       resources:
         limits:
@@ -77,8 +76,8 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
-      - OLLAMA_URL=${OLLAMA_URL}
-      - OLLAMA_MODEL=${OLLAMA_MODEL}
+      - VLLM_URL=${VLLM_URL}
+      - VLLM_MODEL=${VLLM_MODEL}
       - MIN_PASSWORD_LENGTH=${MIN_PASSWORD_LENGTH}
     volumes:
       - ./volumes/nginx_cache:/var/cache/nginx
