--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - FIXED FOR REAL STREAMING
+# nginx/nginx.conf - FIXED FOR REAL STREAMING WITH VLLM
 worker_processes auto;
 error_log /var/log/nginx/error.log info;  # Changed to info for better debugging
 pid /var/run/nginx.pid;
@@ -6,8 +6,8 @@ pid /var/run/nginx.pid;
 env JWT_SECRET;
 env REDIS_HOST;
 env REDIS_PORT;
-env OLLAMA_URL;
-env OLLAMA_MODEL;
+env VLLM_URL;
+env VLLM_MODEL;
 
 events {
     worker_connections 1024;
