--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
-# nginx/nginx.conf - FIXED FOR REAL STREAMING WITH VLLM
+# nginx/nginx.conf - CONFIGURED FOR VLLM BACKEND
 worker_processes auto;
-error_log /var/log/nginx/error.log info;  # Changed to info for better debugging
+error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
 
 env JWT_SECRET;
@@ -32,7 +32,6 @@ http {
     
     # STREAMING: No compression for SSE
     gzip off;  # DISABLED - gzip breaks streaming
-    chunked_transfer_encoding on;
     
     resolver 127.0.0.11 ipv6=off;
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
@@ -202,8 +201,8 @@ http {
             }
         }
 
-        # CHAT API - COMPLETELY FIXED FOR STREAMING
-        location ~ ^/api/chat/ {
+        # VLLM OPENAI-COMPATIBLE API - CHAT COMPLETIONS
+        location ~ ^/v1/chat/completions {
             # CORS headers
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
@@ -222,8 +221,83 @@ http {
             lua_check_client_abort on;         # Check if client disconnects
             content_by_lua_block {
                 local is_who = require "is_who"
-                is_who.route_to_handler("chat_api")
+                is_who.route_to_handler("vllm_chat_api")
             }
+        }
+
+        # VLLM OPENAI-COMPATIBLE API - MODELS
+        location ~ ^/v1/models {
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("vllm_models_api")
+            }
+        }
+
+        # VLLM OPENAI-COMPATIBLE API - COMPLETIONS (non-chat)
+        location ~ ^/v1/completions {
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            # CRITICAL: Complete streaming configuration
+            chunked_transfer_encoding on;      # Enable chunked encoding
+            lua_need_request_body on;
+            lua_check_client_abort on;         # Check if client disconnects
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("vllm_completions_api")
+            }
+        }
+
+
+
+        # VLLM DIRECT PROXY (for debugging/testing)
+        location ~ ^/vllm/(.*)$ {
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            # Direct proxy to vLLM
+            proxy_pass http://vllm:8000/$1$is_args$args;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Streaming settings
+            proxy_buffering off;
+            proxy_request_buffering off;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            chunked_transfer_encoding on;
         }
 
         # ERROR PAGES
