--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: vllm/vllm-openai:latest
     container_name: devstral-vllm
     command: >
-      --model /models/devstral
+      --model /models/devstral/Devstral-Small-2507-Q4_K_M.gguf
       --tokenizer-mode mistral
       --host 0.0.0.0
       --port 8000
@@ -11,9 +11,9 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./volumes/huggingface/hub/models--mistralai--Devstral-Small-2507:/models/devstral
-    #environment:
-    #  - HUGGING_FACE_HUB_TOKEN=${HF_TOKEN}
+      - ./volumes/models:/models
+    networks:
+      - devstral-network
     deploy:
       resources:
         limits:
@@ -29,6 +29,7 @@ services:
       retries: 5
       start_period: 20s
     restart: unless-stopped
+
   redis:
     build: ./redis
     container_name: devstral-redis
