--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: devstral-vllm
     command: >
       --model /models/devstral/Devstral-Small-2507-Q4_K_M.gguf
+      --served-model-name devstral
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
