--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       --host 0.0.0.0
       --port 8000
       --tensor-parallel-size 1
+      --max-model-len 8192
+      --gpu-memory-utilization 0.85
+      --swap-space 4
     ports:
       - "8000:8000"
     volumes:
