self terminating nvidia drivers...

--- a/.env
+++ b/.env
@@ -55,12 +55,12 @@ MAX_PASSWORD_LENGTH=16
 # =============================================================================
 # 🐳 DOCKER RESOURCES - OPTIMIZED
 # =============================================================================
-VLLM_CPU_LIMIT=2.0
-VLLM_MEMORY_LIMIT=16G
-REDIS_MEMORY=1G                         # REDUCED from 1G
-REDIS_CPU=1.0
-NGINX_MEMORY=1G                         # REDUCED from 1G
-NGINX_CPU=1.0
+VLLM_CPU=3.0
+VLLM_MEMORY=15G
+REDIS_MEMORY=512M                         # REDUCED from 1G
+REDIS_CPU=0.5
+NGINX_MEMORY=512M                         # REDUCED from 1G
+NGINX_CPU=0.5
 
 # =============================================================================
 # 📦 REDIS & NETWORK
