--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -201,6 +201,28 @@ http {
             }
         }
 
+        location ~ ^/api/chat/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            # CRITICAL: Complete streaming configuration for SSE
+            chunked_transfer_encoding on;      # Enable chunked encoding
+            lua_need_request_body on;
+            lua_check_client_abort on;         # Check if client disconnects
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("chat_api")
+            }
+        }
+
         # VLLM OPENAI-COMPATIBLE API - CHAT COMPLETIONS
         location ~ ^/v1/chat/completions {
             # CORS headers
