--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# CLEAN .env - Optimized Configuration for Limited VRAM
+# CLEAN .env - Optimized Configuration for RTX 5090 (6GB VRAM Limit)
 # =============================================================================
 
 # 🔐 JWT CONFIGURATION
@@ -23,44 +23,45 @@ OLLAMA_URL=http://vllm:8000
 OLLAMA_MODEL=devstral
 
 # =============================================================================
-# 🎛️ MODEL PARAMETERS - REDUCED FOR STABILITY
+# 🎛️ MODEL PARAMETERS - UPDATED FOR 2048 CONTEXT
 # =============================================================================
 
 # Core model parameters
-MODEL_TEMPERATURE=0.7                      # Reduced from 0.8
+MODEL_TEMPERATURE=0.7                      # Default: 0.7
 MODEL_TOP_P=0.9                           # Default: 0.9  
 MODEL_TOP_K=40                            # Default: 40
 MODEL_MIN_P=0.0                           # Default: 0.0 (disabled)
 MODEL_REPEAT_PENALTY=1.1                  # Default: 1.1
 MODEL_REPEAT_LAST_N=64                    # Default: 64
-# Context and prediction settings - REDUCED
-MODEL_NUM_CTX=512                        # REDUCED from 1024 to stable size
-MODEL_NUM_PREDICT=128                     # REDUCED to 512 tokens max
+
+# Context and prediction settings - UPDATED FOR 2048
+MODEL_NUM_CTX=2048                        # INCREASED to match vLLM config
+MODEL_NUM_PREDICT=512                     # INCREASED for longer responses
 MODEL_SEED=0                              # Default: 0                 
 
 # =============================================================================
 # 📱 APPLICATION SETTINGS
 # =============================================================================
-RATE_LIMIT_MESSAGES_PER_MINUTE=8         
-MAX_MESSAGE_LENGTH=5000                   # REDUCED from 10000
+RATE_LIMIT_MESSAGES_PER_MINUTE=12        # INCREASED for 3 concurrent streams
+MAX_MESSAGE_LENGTH=8000                   # INCREASED for longer context
 
 # User Management
-MAX_CHATS_PER_USER=1
-MAX_PENDING_USERS=2
+MAX_CHATS_PER_USER=3                      # INCREASED to match max_num_seqs
+MAX_PENDING_USERS=5                       # INCREASED
 MIN_USERNAME_LENGTH=3
 MAX_USERNAME_LENGTH=12
 MIN_PASSWORD_LENGTH=6
 MAX_PASSWORD_LENGTH=16
 
 # =============================================================================
-# 🐳 DOCKER RESOURCES - OPTIMIZED
+# 🐳 DOCKER RESOURCES - OPTIMIZED FOR RTX 5090
 # =============================================================================
-VLLM_CPU=3.0
-VLLM_MEMORY=15G
-REDIS_MEMORY=512M                         # REDUCED from 1G
-REDIS_CPU=0.5
-NGINX_MEMORY=512M                         # REDUCED from 1G
-NGINX_CPU=0.5
+VLLM_CPU=4.0                             # INCREASED for better performance
+VLLM_MEMORY=23G                          # Increased for full model in CPU RAM
+REDIS_MEMORY=1G                           # INCREASED back to 1G
+REDIS_CPU=1.0                            # INCREASED
+NGINX_MEMORY=1G                           # INCREASED back to 1G
+NGINX_CPU=1.0                            # INCREASED
 
 # =============================================================================
 # 📦 REDIS & NETWORK
