--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,16 @@ services:
       --port 8000
       --tensor-parallel-size 1
       --max-model-len 2048
-      --gpu-memory-utilization 0.80
+      --gpu-memory-utilization 0.20
       --max-num-seqs 3
+      --disable-log-requests
+      --max-num-batched-tokens 2048
+      --kv-cache-dtype fp8
+      --block-size 16
+      --cpu-offload-gb 14
+      --preload-model-to-cpu
+      --enable-prefix-caching
+      --enable-chunked-prefill
     ports:
       - "8000:8000"
     volumes:
