vllm no support gguf

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# CLEAN .env - Optimized Configuration for RTX 5090 (6GB VRAM Limit)
+# CLEAN .env - Optimized Configuration for Ollama with GGUF Model
 # =============================================================================
 
 # 🔐 JWT CONFIGURATION
@@ -13,14 +13,10 @@ ADMIN_PASSWORD=admin1
 ADMIN_USER_ID=admin
 
 # =============================================================================
-# 🤖 MODEL CONFIGURATION - UPDATED FOR VLLM
+# 🤖 MODEL CONFIGURATION - OLLAMA
 # =============================================================================
-VLLM_URL=http://vllm:8000
-VLLM_MODEL=devstral
-
-# Legacy variables (keeping for backward compatibility)
-OLLAMA_URL=http://vllm:8000
-OLLAMA_MODEL=devstral
+MODEL_URL=http://ollama:11434
+MODEL_NAME=devstral
 
 # =============================================================================
 # 🎛️ MODEL PARAMETERS - UPDATED FOR 2048 CONTEXT
@@ -34,34 +30,39 @@ MODEL_MIN_P=0.0                           # Default: 0.0 (disabled)
 MODEL_REPEAT_PENALTY=1.1                  # Default: 1.1
 MODEL_REPEAT_LAST_N=64                    # Default: 64
 
-# Context and prediction settings - UPDATED FOR 2048
-MODEL_NUM_CTX=2048                        # INCREASED to match vLLM config
-MODEL_NUM_PREDICT=512                     # INCREASED for longer responses
+# Context and prediction settings
+MODEL_NUM_CTX=2048                        # Context window
+MODEL_NUM_PREDICT=512                     # Max tokens to generate
 MODEL_SEED=0                              # Default: 0                 
 
 # =============================================================================
 # 📱 APPLICATION SETTINGS
 # =============================================================================
-RATE_LIMIT_MESSAGES_PER_MINUTE=12        # INCREASED for 3 concurrent streams
-MAX_MESSAGE_LENGTH=8000                   # INCREASED for longer context
+RATE_LIMIT_MESSAGES_PER_MINUTE=12        # For 3 concurrent streams
+MAX_MESSAGE_LENGTH=8000                   # For longer context
 
 # User Management
-MAX_CHATS_PER_USER=3                      # INCREASED to match max_num_seqs
-MAX_PENDING_USERS=5                       # INCREASED
+MAX_CHATS_PER_USER=3                      # Match parallel processing
+MAX_PENDING_USERS=5                       
 MIN_USERNAME_LENGTH=3
 MAX_USERNAME_LENGTH=12
 MIN_PASSWORD_LENGTH=6
 MAX_PASSWORD_LENGTH=16
 
 # =============================================================================
-# 🐳 DOCKER RESOURCES - OPTIMIZED FOR RTX 5090
+# 🐳 DOCKER RESOURCES - OPTIMIZED FOR CPU+GPU HYBRID
 # =============================================================================
-VLLM_CPU=4.0                             # INCREASED for better performance
-VLLM_MEMORY=22G                          # Increased for full model in CPU RAM
-REDIS_MEMORY=1G                           # INCREASED back to 1G
-REDIS_CPU=1.0                            # INCREASED
-NGINX_MEMORY=1G                           # INCREASED back to 1G
-NGINX_CPU=1.0                            # INCREASED
+
+# Ollama configuration - DEV (32GB VRAM)
+OLLAMA_CPU=4.0                            # More CPU for model processing
+OLLAMA_MEMORY=22G                         # Large CPU RAM for model layers
+OLLAMA_GPU_LAYERS=8                      # Partial GPU offload
+
+# Other services
+REDIS_MEMORY=1G
+REDIS_CPU=1.0                             
+NGINX_MEMORY=512M                           
+NGINX_CPU=1.0                             
 
 # =============================================================================
 # 📦 REDIS & NETWORK
